--- a/DocumentView.xaml
+++ b/DocumentView.xaml
@@ -8,7 +8,8 @@
     mc:Ignorable="d"
     Loaded="Page_Loaded"
     Unloaded="Page_Unloaded"
-    DataContext="{Binding TaskDetail, Source={StaticResource Locator}}">
+    DataContext="{Binding TaskDetail, Source={StaticResource Locator}}"
+    Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -19,9 +20,10 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
+            <ColumnDefinition Width="250"/>
         </Grid.ColumnDefinitions>
 
-        <ScrollViewer Grid.Row="1"
+        <ScrollViewer Grid.Row="1" Grid.Column="0"
                        VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Center">
             <GridView ItemsSource="{Binding Pages}" SelectionMode="None" IsItemClickEnabled="False" MaxWidth="600" Background="{StaticResource ButtonBackgroundThemeBrush}">
                 <GridView.ItemTemplate>
@@ -32,9 +34,10 @@
                 </GridView.ItemTemplate>
             </GridView>
         </ScrollViewer>
-        <Slider Maximum="1000" Value="500" Minimum="200" Name="ImageScaleControl" Grid.Column="1" Grid.Row="2" Margin="5"/>
+        
+        <Slider Maximum="1000" Value="500" Minimum="200" Name="ImageScaleControl" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Margin="5"/>
 
-        <Grid Grid.Row="3">
+        <Grid Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="*"/>
@@ -53,5 +56,26 @@
                 </GridView>
             </StackPanel>
         </Grid>
+        <Border Grid.Row="1" Grid.Column="1" BorderBrush="{StaticResource ButtonBorderThemeBrush}" BorderThickness="1" Margin="5" CornerRadius="3" Padding="5">
+            <StackPanel>
+                <ListView ItemsSource="{Binding Assignments}" IsItemClickEnabled="False" SelectionMode="None">
+                    <ListView.Header>
+                        <TextBlock>
+                    Current Task Status
+                        </TextBlock>
+                    </ListView.Header>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="1" Padding="5,2">
+                                <StackPanel>
+                                    <TextBlock Text="{Binding AssignedTo.Name}"/>
+                                    <TextBlock>Status: <Run Text="{Binding Status}"/></TextBlock>
+                                </StackPanel>
+                            </Border>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+        </Border>
     </Grid>
 </Page>
