--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -137,9 +137,9 @@
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="200"/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="1" Content="Logout" Name="Logout" HorizontalAlignment="Right" Margin="0,0,5,0"/>
+            <Button Grid.Column="1" Content="Logout" Name="Logout" HorizontalAlignment="Right" Margin="0,0,5,0" Click="Logout_Click"/>
             <TextBlock TextAlignment="Center" Grid.Column="0" Text="{Binding Status, Mode=TwoWay}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5"/>
         </Grid>
     </Grid>
