--- a/DocumentView.xaml
+++ b/DocumentView.xaml
@@ -14,22 +14,32 @@
 
     <Grid Name="DisplayGrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="20"/>
-            <RowDefinition />
+            <RowDefinition Height="70"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
-            <ColumnDefinition x:Name="Sidebar" Width="250"/>
+            <ColumnDefinition x:Name="Sidebar" Width="300"/>
         </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="5">
+            <TextBlock Style="{StaticResource TitleTextBlockStyle}" TextWrapping="NoWrap" HorizontalAlignment="Center">
+                <Run Text="{Binding Task.Message}"/>
+            </TextBlock>
+            <TextBlock HorizontalAlignment="Right">
+                Assigned By: <Run Text="{Binding Task.CreatedBy.Name}"/>
+            </TextBlock>
+        </StackPanel>
+
 
         <ScrollViewer Name="Viewport" Grid.Row="1" Grid.Column="0"
                        VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Center">
             <GridView HorizontalAlignment="Center" ItemsSource="{Binding Pages}" SelectionMode="None" IsItemClickEnabled="False" MaxWidth="{Binding ElementName=Viewport, Path=Width}">
                 <GridView.ItemTemplate>
                     <DataTemplate>
-                        <Border Background="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="1">
+                        <Border Background="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="1" CornerRadius="5">
                             <Image Stretch="UniformToFill" Source="{Binding}" Width="{Binding Value,ElementName=ImageScaleControl}" Margin="5">
                             </Image>
                         </Border>
@@ -50,6 +60,7 @@
             </Grid.RowDefinitions>
             <Button Grid.Column="0" Click="Button_Click" Content="Return to List" Margin="15,0,0,0"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right"  Grid.Column="1">
+                <Button Content="View On Box" Name="BrowserLaunch" Click="BrowserLaunch_Click" Margin="5"/>
                 <GridView ItemsSource="{Binding Assignment.Actions}" Margin="3">
                     <GridView.ItemTemplate>
                         <DataTemplate>
@@ -59,98 +70,150 @@
                 </GridView>
             </StackPanel>
         </Grid>
-        <Border Grid.Row="1" Grid.Column="1" BorderBrush="{StaticResource ButtonBorderThemeBrush}" BorderThickness="1" Margin="5" CornerRadius="3" Padding="5">
-            <StackPanel>
-                <Border>
-                    <ListView ItemsSource="{Binding Assignments}" IsItemClickEnabled="False" SelectionMode="None">
-                        <ListView.Header>
-                            <TextBlock>
-                        Current Task Status
-                            </TextBlock>
-                        </ListView.Header>
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <Border BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="1" Padding="5,2">
-                                    <StackPanel>
-                                        <TextBlock Text="{Binding AssignedTo.Name}"/>
-                                        <TextBlock>Status: <Run Text="{Binding Status}"/></TextBlock>
-                                    </StackPanel>
-                                </Border>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </Border>
-                <Border>
-                    <ListView ItemsSource="{Binding Comments.Entries}">
-                        <ListView.Header>
-                            <TextBlock>Comments</TextBlock>
-                        </ListView.Header>
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <Border BorderThickness="1" BorderBrush="{StaticResource ButtonBorderThemeBrush}" CornerRadius="3" Padding="5">
-                                    <StackPanel>
-                                        <TextBlock TextWrapping="Wrap">
-                                            <Run Text="{Binding Message}"/>
+
+        <ScrollViewer Grid.Row="1" Grid.Column="1">
+            <Border BorderBrush="{StaticResource ButtonBorderThemeBrush}" BorderThickness="1" Margin="5" CornerRadius="3" Padding="5">
+                <StackPanel>
+                    <Border>
+                        <ListView ItemsSource="{Binding Assignments}" IsItemClickEnabled="False" SelectionMode="None">
+                            <ListView.Header>
+                                <TextBlock Style="{StaticResource SubtitleTextBlockStyle}">
+                                    Assignment Status
+                                </TextBlock>
+                            </ListView.Header>
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="ListViewItem">
+                                    <Setter Property="BorderThickness" Value="1"/>
+                                    <Setter Property="BorderBrush" Value="{StaticResource ButtonBorderThemeBrush}"/>
+                                    <Setter Property="CornerRadius" Value="3"/>
+                                    <Setter Property="Margin" Value="5"/>
+                                    <Setter Property="Padding" Value="5"/>
+                                    <Setter Property="MinHeight" Value="0"/>
+                                </Style>
+                            </ListView.ItemContainerStyle>
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Style="{StaticResource CaptionTextBlockStyle}"> 
+                                    <Run Text="{Binding AssignedTo.Name}"/>
+                                    : 
+                                    <Run FontWeight="SemiBold" Text="{Binding Status}"/>
+                                    </TextBlock>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </Border>
+                    <Border>
+                        <StackPanel>
+                            <TextBlock Style="{StaticResource SubtitleTextBlockStyle}">File Information</TextBlock>
+                            <Border >
+                                <Grid Padding="5" Margin="5" BorderBrush="{StaticResource ButtonBorderThemeBrush}" BorderThickness="1" RowSpacing="5">
+
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition/>
+
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+                                    <StackPanel  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+
+                                        <TextBlock Style="{StaticResource BaseTextBlockStyle}" FontWeight="SemiBold">
+                                        File Name
                                         </TextBlock>
-                                        <Border BorderThickness="0,1,0,0" BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" CornerRadius="3">
-                                            <TextBlock HorizontalAlignment="Right">
-                                                By: <Run FontStyle="Italic" Text="{Binding CreatedBy.Name}"/>
-                                            </TextBlock>
+                                        <Border BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="0,0,0,1" Padding="2">
+                                            <TextBlock TextWrapping="Wrap" Text="{Binding File.Name}"/>
                                         </Border>
                                     </StackPanel>
-                                </Border>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </Border>
-                <Border>
-                    <StackPanel>
-                        <TextBlock>File Information</TextBlock>
-                        <Border >
-                            <Grid Padding="5" Margin="5" BorderBrush="{StaticResource ButtonBorderThemeBrush}" BorderThickness="1" RowSpacing="5">
-                                
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition/>
 
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                </Grid.RowDefinitions>
-                                
-                                <TextBlock Grid.Row="0" Grid.Column="0">
-                                    File Name
-                                </TextBlock>
-                                <TextBlock Grid.Row="0" Grid.Column="1" TextWrapping="Wrap" Text="{Binding File.Name}"/>
-                                <TextBlock Grid.Row="1" Grid.Column="0">
-                                    Folder
-                                </TextBlock>
-                                <TextBlock Grid.Row="1" Grid.Column="1" TextWrapping="Wrap" Text="{Binding File.Parent.Name}"/>
-                                <TextBlock Grid.Row="2" Grid.Column="0">
-                                    Uploader
-                                </TextBlock>
-                                <TextBlock Grid.Row="2" Grid.Column="1" TextWrapping="Wrap" Text="{Binding File.CreatedBy.Name}"/>
-                                <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">
-                                    <TextBlock>
-                                        Email
-                                    </TextBlock>
-                                    <TextBlock HorizontalAlignment="Right" TextWrapping="Wrap" Text="{Binding File.CreatedBy.Login}"/>
-                                </StackPanel>
-                                <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
-                                    <TextBlock >
+                                    <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+                                        <TextBlock Style="{StaticResource BaseTextBlockStyle}" FontWeight="SemiBold">
+                                        Folder
+                                        </TextBlock>
+                                        <Border BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="0,0,0,1" Padding="2">
+                                            <TextBlock TextWrapping="Wrap" Text="{Binding File.Parent.Name}"/>
+                                        </Border>
+                                    </StackPanel>
+
+                                    <Border Grid.Row="2" Grid.Column="0"  BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="0,0,0,1" Padding="2">
+                                        <TextBlock Style="{StaticResource BaseTextBlockStyle}" FontWeight="SemiBold">
+                                        Creator
+                                        </TextBlock>
+                                    </Border>
+                                    <Border  Grid.Row="2" Grid.Column="1" BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="0,0,0,1" Padding="2">
+                                        <TextBlock TextWrapping="Wrap" Text="{Binding File.CreatedBy.Name}"/>
+                                    </Border>
+                                    <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">
+                                        <TextBlock Style="{StaticResource BaseTextBlockStyle}" FontWeight="SemiBold">
+                                        Uploader Email
+                                        </TextBlock>
+                                        <Border BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="0,0,0,1" Padding="2">
+                                            <TextBlock TextWrapping="Wrap" Text="{Binding File.CreatedBy.Login}"/>
+                                        </Border>
+                                    </StackPanel>
+
+                                    <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
+                                        <TextBlock Style="{StaticResource BaseTextBlockStyle}" FontWeight="SemiBold">
                                         Creation Time
-                                    </TextBlock>
-                                    <TextBlock TextWrapping="Wrap" HorizontalAlignment="Right" Text="{Binding File.CreatedAt}"/>
-                                </StackPanel>
-                            </Grid>
-                        </Border>
-                    </StackPanel>
-                </Border>
-            </StackPanel>
-        </Border>
+                                        </TextBlock>
+                                        <Border BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="0,0,0,0" Padding="2">
+                                            <TextBlock TextWrapping="Wrap" Text="{Binding File.CreatedAt}"/>
+                                        </Border>
+                                    </StackPanel>
+                                </Grid>
+                            </Border>
+                            <Border>
+                                <ListView ItemsSource="{Binding Comments.Entries}">
+                                    <ListView.Header>
+                                        <TextBlock Style="{StaticResource SubtitleTextBlockStyle}">Comments</TextBlock>
+                                    </ListView.Header>
+                                    <ListView.ItemContainerStyle>
+                                        <Style TargetType="ListViewItem">
+                                            <Setter Property="BorderThickness" Value="1"/>
+                                            <Setter Property="BorderBrush" Value="{StaticResource ButtonBorderThemeBrush}"/>
+                                            <Setter Property="CornerRadius" Value="3"/>
+                                            <Setter Property="Margin" Value="5"/>
+                                            <Setter Property="Padding" Value="5"/>
+                                            <Setter Property="MinHeight" Value="0"/>
+                                            
+                                        </Style>
+                                    </ListView.ItemContainerStyle>
+                                    <ListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid Width="255">
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition/>
+                                                    <RowDefinition/>
+                                                </Grid.RowDefinitions>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition/>
+                                                </Grid.ColumnDefinitions>
+                                                <TextBlock Grid.Row="0" Grid.Column="0" TextWrapping="Wrap">
+                                                    <Run Text="{Binding Message}"/>
+                                                </TextBlock>
+                                                <Border Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" BorderThickness="0,1,0,0" Margin="2" BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}">
+                                                    <TextBlock>
+                                                        <Run FontStyle="Italic" Text="{Binding CreatedBy.Name}"/>
+                                                    </TextBlock>
+                                                </Border>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </ListView.ItemTemplate>
+                                    <ListView.Footer>
+                                        <Button Content="Add Comment" Name="AddComment" HorizontalAlignment="Right" Click="AddComment_Click"/>
+                                    </ListView.Footer>
+                                </ListView>
+                            </Border>
+
+                        </StackPanel>
+                    </Border>
+                </StackPanel>
+            </Border>
+        </ScrollViewer>
+        
     </Grid>
 </Page>
