--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -39,7 +39,7 @@
                 <ListView ItemsSource="{Binding Tasks}" HorizontalAlignment="Stretch" SelectionChanged="ListView_SelectionChanged" SelectionMode="None" IsItemClickEnabled="True" ItemClick="ListView_ItemClick">
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <Grid BorderBrush="{StaticResource ButtonBorderThemeBrush}" CornerRadius="3" BorderThickness="1" Margin="5">
+                            <Grid BorderBrush="{StaticResource ButtonBorderThemeBrush}" CornerRadius="3" BorderThickness="1" Margin="5" MaxWidth="700">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="196" />
                                     <ColumnDefinition Width="*" />
@@ -104,22 +104,6 @@
                                             </ListView>
                                         </ScrollViewer>
                                     </Grid>
-                                    
-                                    <Popup  Name="CommentEntry" Grid.Row="2" VerticalOffset="-100" HorizontalOffset="60" Grid.Column="0">
-                                        <Border BorderBrush="{StaticResource ButtonForegroundThemeBrush}" BorderThickness="1" CornerRadius="3" Margin="5">
-                                            <Grid Padding="5" Background="{StaticResource SystemColorWindowBrush}">
-                                                <Grid.RowDefinitions>
-                                                    <RowDefinition/>
-                                                    <RowDefinition/>
-                                                </Grid.RowDefinitions>
-                                                <TextBox Name="NewComment" Grid.Row="0" Grid.Column="0" Width="300" Height="100" AcceptsReturn="True" TextWrapping="Wrap"/>
-                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="1" Grid.Column="0" Margin="5">
-                                                    <Button Content="Add" Name="Add" Click="Add_Click" Margin="0,0,5,0"/>
-                                                    <Button Content="Cancel" Name="Cancel" Click="Cancel_Click"/>
-                                                </StackPanel>
-                                            </Grid>
-                                        </Border>
-                                    </Popup>
 
                                     <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,5,0">
                                         <Button Name="Review" Content="Review" Click="Review_Click"></Button>
