--- a/DocumentView.xaml
+++ b/DocumentView.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     Loaded="Page_Loaded"
     Unloaded="Page_Unloaded"
-    DataContext="{Binding TaskDetail, Source={StaticResource Locator}}"
+    DataContext="{Binding Path=Instance.TaskDetail, Source={StaticResource Locator}}"
     Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
     SizeChanged="page_SizeChanged">
 
@@ -40,8 +40,7 @@
                 <GridView.ItemTemplate>
                     <DataTemplate>
                         <Border Background="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="1" CornerRadius="5">
-                            <Image Stretch="UniformToFill" Source="{Binding}" Width="{Binding Value,ElementName=ImageScaleControl}" Margin="5">
-                            </Image>
+                            <Image Stretch="UniformToFill" Source="{Binding}" Width="{Binding Value,ElementName=ImageScaleControl}" Margin="5"/>
                         </Border>
                     </DataTemplate>
                 </GridView.ItemTemplate>
@@ -103,113 +102,7 @@
                         </ListView>
                     </Border>
                     <Border>
-                        <StackPanel>
-                            <TextBlock Style="{StaticResource SubtitleTextBlockStyle}">File Information</TextBlock>
-                            <Border >
-                                <Grid Padding="5" Margin="5" BorderBrush="{StaticResource ButtonBorderThemeBrush}" BorderThickness="1" RowSpacing="5">
-
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition/>
-                                        <ColumnDefinition/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition/>
-
-                                        <RowDefinition/>
-                                        <RowDefinition/>
-                                        <RowDefinition/>
-                                        <RowDefinition/>
-                                    </Grid.RowDefinitions>
-                                    <StackPanel  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
-
-                                        <TextBlock Style="{StaticResource BaseTextBlockStyle}" FontWeight="SemiBold">
-                                        File Name
-                                        </TextBlock>
-                                        <Border BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="0,0,0,1" Padding="2">
-                                            <TextBlock TextWrapping="Wrap" Text="{Binding File.Name}"/>
-                                        </Border>
-                                    </StackPanel>
-
-                                    <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
-                                        <TextBlock Style="{StaticResource BaseTextBlockStyle}" FontWeight="SemiBold">
-                                        Folder
-                                        </TextBlock>
-                                        <Border BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="0,0,0,1" Padding="2">
-                                            <TextBlock TextWrapping="Wrap" Text="{Binding File.Parent.Name}"/>
-                                        </Border>
-                                    </StackPanel>
-
-                                    <Border Grid.Row="2" Grid.Column="0"  BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="0,0,0,1" Padding="2">
-                                        <TextBlock Style="{StaticResource BaseTextBlockStyle}" FontWeight="SemiBold">
-                                        Creator
-                                        </TextBlock>
-                                    </Border>
-                                    <Border  Grid.Row="2" Grid.Column="1" BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="0,0,0,1" Padding="2">
-                                        <TextBlock TextWrapping="Wrap" Text="{Binding File.CreatedBy.Name}"/>
-                                    </Border>
-                                    <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">
-                                        <TextBlock Style="{StaticResource BaseTextBlockStyle}" FontWeight="SemiBold">
-                                        Uploader Email
-                                        </TextBlock>
-                                        <Border BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="0,0,0,1" Padding="2">
-                                            <TextBlock TextWrapping="Wrap" Text="{Binding File.CreatedBy.Login}"/>
-                                        </Border>
-                                    </StackPanel>
-
-                                    <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
-                                        <TextBlock Style="{StaticResource BaseTextBlockStyle}" FontWeight="SemiBold">
-                                        Creation Time
-                                        </TextBlock>
-                                        <Border BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}" BorderThickness="0,0,0,0" Padding="2">
-                                            <TextBlock TextWrapping="Wrap" Text="{Binding File.CreatedAt}"/>
-                                        </Border>
-                                    </StackPanel>
-                                </Grid>
-                            </Border>
-                            <Border>
-                                <ListView ItemsSource="{Binding Comments.Entries}">
-                                    <ListView.Header>
-                                        <TextBlock Style="{StaticResource SubtitleTextBlockStyle}">Comments</TextBlock>
-                                    </ListView.Header>
-                                    <ListView.ItemContainerStyle>
-                                        <Style TargetType="ListViewItem">
-                                            <Setter Property="BorderThickness" Value="1"/>
-                                            <Setter Property="BorderBrush" Value="{StaticResource ButtonBorderThemeBrush}"/>
-                                            <Setter Property="CornerRadius" Value="3"/>
-                                            <Setter Property="Margin" Value="5"/>
-                                            <Setter Property="Padding" Value="5"/>
-                                            <Setter Property="MinHeight" Value="0"/>
-                                            
-                                        </Style>
-                                    </ListView.ItemContainerStyle>
-                                    <ListView.ItemTemplate>
-                                        <DataTemplate>
-                                            <Grid Width="255">
-                                                <Grid.RowDefinitions>
-                                                    <RowDefinition/>
-                                                    <RowDefinition/>
-                                                </Grid.RowDefinitions>
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition/>
-                                                </Grid.ColumnDefinitions>
-                                                <TextBlock Grid.Row="0" Grid.Column="0" TextWrapping="Wrap">
-                                                    <Run Text="{Binding Message}"/>
-                                                </TextBlock>
-                                                <Border Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" BorderThickness="0,1,0,0" Margin="2" BorderBrush="{StaticResource ButtonDisabledBorderThemeBrush}">
-                                                    <TextBlock>
-                                                        <Run FontStyle="Italic" Text="{Binding CreatedBy.Name}"/>
-                                                    </TextBlock>
-                                                </Border>
-                                            </Grid>
-                                        </DataTemplate>
-                                    </ListView.ItemTemplate>
-                                    <ListView.Footer>
-                                        <Button Content="Add Comment" Name="AddComment" HorizontalAlignment="Right" Click="AddComment_Click"/>
-                                    </ListView.Footer>
-                                </ListView>
-                            </Border>
-
-                        </StackPanel>
+                        
                     </Border>
                 </StackPanel>
             </Border>
