--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -8,7 +8,7 @@
     x:Class="Box_Task_Manager.MainPage"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    DataContext="{Binding Main, Source={StaticResource Locator}}">
+    DataContext="{Binding Instance.Main, Source={StaticResource Locator}}">
     <Page.Resources>
         <local:NonZeroValueConverter x:Key="ISNonZero"/>
         <DataTemplate x:Key="commentsDisplay">
